--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,14 @@
 title: Muhammad Septian Nugroho # your name (or website title) here
 logo: "/images/Profil.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
+I have good motivation to grow, interested in new things and able to work individually or as a team. Interested in technology for a long time, such as VR/AR, AI, Machine Learning, and Game Creation.
+<br><br>
+Currently undergoing independent study as a data analyst at PT Zona Edukasi Nusantara (Zenius)
+<br><br>
+In my spare time, I like to read books and e-books and learn about website creation and website development for the tourist village of Tingkir Lor, our village that provides tourist destinations.
+<br><br>
+Please contact me (ian) at xzclotus@gmail.com
+<br><br>
   <a href="https://www.linkedin.com/in/muhammad-septian-nugroho-8a8218193/">My LinkedIn</a> 
   
 theme: jekyll-theme-minimal
