--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Muhammad Septian Nugroho # your name (or website title) here
+logo: "/images/Profil.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  First description I have good motivation to grow, interested in new things and able to work individually or as a team. 
   <br><br>
   Second description 
   <br><br>
