--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
 title: Muhammad Septian Nugroho # your name (or website title) here
 logo: "/images/Profil.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  <div class="text-justify">
-  I have good motivation to grow, interested in new things and able to work individually or as a team. Interested in technology for a long time, such as VR/AR, AI, Machine Learning, and Game Creation. 
+  <div class="text-justify">I have good motivation to grow, interested in new things and able to work individually or as a team. Interested in technology for a long time, such as VR/AR, AI, Machine Learning, and Game Creation. 
   Currently undergoing independent study as a data analyst at PT Zona Edukasi Nusantara (Zenius). In my spare time, I usually read anything like books, comics, or looking for something interesting. 
-  In addition, I also learned how to create and develop a website for our village, a tourist village that provides tourist destinations. 
+  In addition, I also learned how to create and develop a website for our village, a tourist village that provides tourist destinations.</div>
   <br><br>
   Kindly contact Ian at xzclotus@gmail.com
-  </div>
   <br><br>
   <a href="https://www.linkedin.com/in/muhammad-septian-nugroho-8a8218193/">LinkedIn</a>
   <br><br>
