--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   In addition, I also learned how to create and develop a website for our village, a tourist village that provides tourist destinations.
   <br><br>
   Kindly contact Ian at 
-  <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">xzclotus@gmail.com</a>
+  <a>xzclotus@gmail.com</a>
   <br><br>
   <a href="https://www.linkedin.com/in/muhammad-septian-nugroho-8a8218193/">LinkedIn</a><br><br>
   <a href="https://www.instagram.com/yandeyyan/">Instagram</a>
